<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/svg_logout"
        android:orderInCategory="10"
        android:title="@string/title_logout"
        app:showAsAction="always" />

    <item
        android:id="@+id/actions_sorting"
        android:icon="@drawable/svg_overflow"
        android:orderInCategory="101"
        android:title="@string/title_sortings"
        app:showAsAction="always">

        <menu>

            <item
                android:id="@+id/action_sort_by_name"
                android:title="@string/title_sort_by_name"
                app:showAsAction="ifRoom" />

            <item
                android:id="@+id/action_sort_by_email"
                android:title="@string/title_sort_by_email"
                app:showAsAction="ifRoom" />

        </menu>

    </item>

</menu>