<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edit_text_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_margin_padding"
            android:hint="@string/title_first_name"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLength="30"
            android:theme="@style/EditTextColorCustom"
            app:met_baseColor="@android:color/black"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="30"
            app:met_primaryColor="@color/colorPrimary"
            app:met_textColor="@android:color/black" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edit_text_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_margin_padding"
            android:layout_marginTop="@dimen/default_margin_padding"
            android:hint="@string/title_last_name"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLength="30"
            android:theme="@style/EditTextColorCustom"
            app:met_baseColor="@android:color/black"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="30"
            app:met_primaryColor="@color/colorPrimary"
            app:met_textColor="@android:color/black" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edit_text_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_margin_padding"
            android:layout_marginTop="@dimen/default_margin_padding"
            android:hint="@string/title_email"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:maxLength="150"
            android:theme="@style/EditTextColorCustom"
            app:met_baseColor="@android:color/black"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="150"
            app:met_primaryColor="@color/colorPrimary"
            app:met_textColor="@android:color/black" />

        <Button
            android:id="@+id/button_save_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button_rounded"
            android:gravity="center"
            android:text="@string/title_save_contact"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
    </LinearLayout>

</ScrollView>